--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ img.animated-gif{
   width: 300px;
   padding: 10px;
 }
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ }
 
 
 
