--- a/css/treatment-styles.css
+++ b/css/treatment-styles.css
@@ -4,6 +4,7 @@
  background-repeat: repeat-x;
  min-height: 200px;
  background-position: absolute;
+ /* box-shadow: 0 0 16px rgba(0, 0, 0, 0.5); */
 }
 .my-navbar {
  background-color: #718c83;
@@ -11,13 +12,14 @@
 .my-navbar .navbar-mood-city {
  color: #D9FFEF;
    font-family: Bobber;
-   font-size: 50px;
+   font-size: 37px;
 }
 .my-navbar .navbar-mood-city:hover {
  color: #4c5445;
 }
 .my-navbar .nav-link {
  color: #D9FFEF;
+ font-family: Bobber;
 }
 .my-navbar .nav-link:hover {
  color: #4c5445;
@@ -38,12 +40,7 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
-}
-.center-treatment {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 }
 .treatment-title {
   text-align: center;
@@ -53,14 +50,26 @@
  src: url(new-regular.ttf);
  font-weight:400;
 }
+h1 {
+  font-family: NewRegular;
+  font-size: 70px;
+}
 h2 {
   font-family: NewRegular;
   font-size: 60px;
 }
 p {
   text-align: justify;
-  padding-top: 40px;
 }
 body {
-  background-color: #7f9d93;
+  background-color: #718c83;
+}
+.treatment {
+text-align: left;
+padding-top: 20px;
+padding-bottom: 0;
+}
+.text {
+  padding-top: 20px;
+  display: none;
 }
