--- a/home-page-css/home-page-styles.css
+++ b/home-page-css/home-page-styles.css
@@ -12,10 +12,6 @@
   color: #D9FFEF;
     font-family: Bobber;
     font-size: 50px;
-    }
-  }
-
-
 }
 .my-navbar .navbar-mood-city:hover {
   color: #4c5445;
@@ -53,15 +49,11 @@ h3 {
   text-align: justify;
   font-family: sans-serif;
 }
-
 img.animated-gif{
   width: 900px;
   height: 500px;
-
-
 }
-
-  .mascot {
+.mascot {
   float: left;
   width: 300px;
   padding: 10px;
@@ -70,6 +62,9 @@ img.animated-gif{
     display: block;
     margin-left: auto;
     margin-right: auto;
+ }
+ body {
+   background-color: #718c83;
  }
 
 
