--- a/home-page-css/home-page-styles.css
+++ b/home-page-css/home-page-styles.css
@@ -1,3 +1,4 @@
+
 .navbar {
   background-image: url("cityscape.jpg");
   background-size: 250px 200px;
@@ -12,9 +13,10 @@
   color: #D9FFEF;
     font-family: Bobber;
     font-size: 50px;
+    text-decoration:  none;
 }
 .my-navbar .navbar-mood-city:hover {
-  color: #4c5445;
+  color: #D9FFEF;
 }
 .my-navbar .nav-link {
   color: #D9FFEF;
