--- a/treatment-css/treatment-styles.css
+++ b/treatment-css/treatment-styles.css
@@ -72,5 +72,13 @@ padding-bottom: 0;
 }
 .text {
   padding-top: 20px;
+}
+.img__description-therapy{
   display: none;
+}
+.img__description-medication{
+  display: none;
+}
+.hover{
+  cursor: pointer;
 }
