--- a/treatment-css/treatment-styles.css
+++ b/treatment-css/treatment-styles.css
@@ -13,9 +13,10 @@
  color: #D9FFEF;
    font-family: Bobber;
    font-size: 37px;
+   text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
- color: #4c5445;
+ color: #D9FFEF;
 }
 .my-navbar .nav-link {
  color: #D9FFEF;
