--- a/resources-css/resources-styles.css
+++ b/resources-css/resources-styles.css
@@ -43,8 +43,6 @@ body {
 h1 {
   font-family: NewRegular;
   font-size: 70px;
-  text-align: left;
-  padding-top: 10px;
 }
 p {
   font-family: sans-serif;
@@ -56,9 +54,27 @@ body {
 }
 
 p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 150px;
-    margin-inline-end: 150px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 150px;
+  margin-inline-end: 150px;
 }
+.resources {
+ text-align: left;
+ padding-top: 20px;
+ padding-bottom: 0;
+}
+.simple-subscription-form {
+  background: #0c3e5f;
+  color: #fefefe;
+  padding: 2rem;
+  border-radius: 0;
+}
+/* .simple-subscription-form .button {
+margin-bottom: 0;
+border-radius: 0 0 0 0;
+}
+.form {
+padding-left: 0;
+} */
