--- a/treatment-css/treatment-styles.css
+++ b/treatment-css/treatment-styles.css
@@ -61,7 +61,9 @@ h2 {
 }
 p {
   text-align: justify;
-  font-family: sans-serif;
+  font-family: Helvetica Neue;
+  line-height: 1.5em;
+  font-size: 17px;
 }
 body {
   background-color: #718c83;
@@ -73,6 +75,8 @@ padding-bottom: 0;
 }
 .text {
   padding-top: 20px;
+  font-family: Helvetica Neue;
+  line-height: 1.5em;
 }
 .img__description-therapy{
   display: none;
@@ -82,4 +86,7 @@ padding-bottom: 0;
 }
 .hover{
   cursor: pointer;
+}
+.help {
+  text-align: center;
 }
