--- a/resources-css/resources-styles.css
+++ b/resources-css/resources-styles.css
@@ -168,3 +168,12 @@ img.animated-gif{
     margin-left: auto;
     margin-right: auto;
  }
+ .red {
+   color: #da3a20;
+ }
+ .blue {
+   color: #3669c9;
+ }
+ .yellow {
+   color: #fd9827;
+ }
