changing colors of the links

--- a/home-page-css/home-page-styles.css
+++ b/home-page-css/home-page-styles.css
@@ -82,3 +82,12 @@ img.animated-gif{
    color: #D9FFEF;
   text-decoration: none;
  }
+ .red {
+   color: #da3a20;
+ }
+ .blue {
+   color: #3669c9;
+ }
+ .yellow {
+   color: #fd9827;
+ }
