--- a/home-page-css/home-page-styles.css
+++ b/home-page-css/home-page-styles.css
@@ -23,7 +23,7 @@
   font-family: Bobber;
 }
 .my-navbar .nav-link:hover {
-  color: #4c5445;
+  color: #fd9827;
 }
 .my-navbar .navbar-mood-city .navbar-nav {
   vertical-align: bottom;
