--- a/resources-css/resources-styles.css
+++ b/resources-css/resources-styles.css
@@ -22,7 +22,7 @@
   font-family: Bobber;
 }
 .my-navbar .nav-link:hover {
-  color: #4c5445;
+  color: #fd9827;
 }
 .my-navbar .navbar-mood-city .navbar-nav {
   vertical-align: bottom;
