--- a/resources-css/resources-styles.css
+++ b/resources-css/resources-styles.css
@@ -15,7 +15,7 @@
   text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
-  color: #D9FFEF;
+  color: #fd9827;
 }
 .my-navbar .nav-link {
   color: #D9FFEF;
