--- a/resources-css/resources-styles.css
+++ b/resources-css/resources-styles.css
@@ -15,8 +15,8 @@
   text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
-  color: #fd9827;
-}
+  color: #D9FFEF;
+}  
 .my-navbar .nav-link {
   color: #D9FFEF;
   font-family: Bobber;
