--- a/home-page-css/home-page-styles.css
+++ b/home-page-css/home-page-styles.css
@@ -13,11 +13,11 @@
   color: #D9FFEF;
     font-family: Bobber;
     font-size: 50px;
-    text-decoration:  none;
+    text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
-  color: #fd9827;
-}
+  color: #D9FFEF;
+}   
 .my-navbar .nav-link {
   color: #D9FFEF;
   font-family: Bobber;
