--- a/treatment-css/treatment-styles.css
+++ b/treatment-css/treatment-styles.css
@@ -14,6 +14,9 @@
  font-size: 37px;
  text-decoration: none;
 }
+.my-navbar .navbar-mood-city:hover {
+ color: #D9FFEF;
+}
 .my-navbar .nav-link {
  color: #D9FFEF;
  font-family: Bobber;
