--- a/symptoms-css/symptoms-styles.css
+++ b/symptoms-css/symptoms-styles.css
@@ -10,9 +10,9 @@
 }
 .my-navbar .navbar-mood-city {
   color: #D9FFEF;
-    font-family: Bobber;
-    font-size: 50px;
-    text-decoration: none;
+  font-family: Bobber;
+  font-size: 50px;
+  text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
   color: #D9FFEF;
@@ -22,7 +22,7 @@
   font-family: Bobber;
 }
 .my-navbar .nav-link:hover {
-  color: #4c5445;
+  color: #fd9827;
 }
 .my-navbar .navbar-mood-city .navbar-nav {
   vertical-align: bottom;
