--- a/symptoms-css/symptoms-styles.css
+++ b/symptoms-css/symptoms-styles.css
@@ -10,13 +10,13 @@
 }
 .my-navbar .navbar-mood-city {
   color: #D9FFEF;
-    font-family: Bobber;
-    font-size: 50px;
-    text-decoration: none;
+  font-family: Bobber;
+  font-size: 50px;
+  text-decoration: none;
 }
 .my-navbar .navbar-mood-city:hover {
   color: #D9FFEF;
-}  
+}
 .my-navbar .nav-link {
   color: #D9FFEF;
   font-family: Bobber;
@@ -36,8 +36,8 @@
 body {
   background-color: #718c83;
   font-family: Helvetica Neue;
-  font-style: 16px;
-  line-height: 2em;
+  /* font-style: 16px;
+  line-height: 2em; */
 }
 @font-face {
   font-family: NewRegular;
@@ -50,10 +50,13 @@ h2 {
   padding-top: 10px;
 }
 p {
-  font-family: sans-serif;
   padding-top: 10px;
   padding-bottom: 10px;
   float: right;
+  text-align: justify;
+  font-family: Helvetica Neue;
+  font-style: 16px;
+  line-height: 2em;
 }
 piechart: {
     width: 300,
@@ -64,7 +67,4 @@ piechart: {
     }
 piechart {
   float: left;
-}
-ul li {
-  text-align: justify;
 }
